Add test-jenkins rule to ivy template and enable rule in a few projects, littleware fix bug setting up server version node