@@ -12,6 +12,8 @@
     >
     <description>Builds, tests, and runs the project littleware.</description>
     <property name="ivy.deliver.revision" value="2.3" />
+    <property name="test.classFile" value="littleware/test/PackageTestSuite.class" />
+    <property name="test.class.name" value="littleware.test.PackageTestSuite" />
     <import file="../ivy/ivy_build_rules.xml"/>
     <import file="nbproject/build-impl.xml"/>
     <!--
@@ -103,38 +105,5 @@
    <fileset dir="build/classes" includes="littleware/test/**" />
      </jar>
 </target>
-
-<target depends="jar" name="test-hudson">
-  <mkdir dir="${test.reports}"/>
-  <junit fork="yes" printsummary="no" haltonfailure="no">
-    <jvmarg value="-Xms300m" />
-    <jvmarg value="-Xmx300m" />
-    <jvmarg value="-Djava.awt.headless=true" />
-    <jvmarg value="-Dlittleware.properties=${test.properties.dir}/littleware.properties" />
-    <jvmarg value="-Djava.util.logging.config.file=${test.properties.dir}/logging.properties" />
-    <jvmarg value="-Dlittleware_jdbc.properties=${test.properties.dir}/littleware_jdbc.properties" />
-    <jvmarg value="-Djava.security.manager" />
-    <jvmarg value="-Djava.awt.headless=true" />
-    <jvmarg value="-Djava.security.policy=${test.properties.dir}/littleware.policy" />
-    <jvmarg value="-Dlittleware.install=${test.properties.dir}/.." />
-    <batchtest fork="yes" todir="${test.reports}" >
-      <fileset dir="${build.classes.dir}">
-        <include name="littleware/test/PackageTestSuite.class" />
-      </fileset>
-    </batchtest>
-    <formatter type="xml" />
-    <classpath path="${run.classpath}" />
-  </junit>
-
-<!--
-  <junitreport todir="${test.reports}">
-    <fileset dir="${test.reports}">
-      <include name="TEST-*.xml" />
-    </fileset>
-    <report todir="${test.reports}" />
-  </junitreport>
-  -->
-</target>
-
 
 </project>
